k3s/tests/e2e/amd64_resource_files/loadbalancer.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-loadbalancer
spec:
  selector:
    matchLabels:
      k8s-app: nginx-app-loadbalancer
  replicas: 2
  template:
    metadata:
      labels:
        k8s-app: nginx-app-loadbalancer
    spec:
      containers:
      - name: nginx
        image: rancher/mirrored-library-busybox:1.37.0
        args: ['sh', '-c', 'echo Welcome to nginx! > index.html; hostname > name.html; httpd -vvf']
        ports:
        - containerPort: 80
        volumeMounts:
        - name: nginx-config-volume
          mountPath: /etc/nginx/conf.d
      volumes:
      - name: nginx-config-volume
        configMap:
          name: nginx-config
---
apiVersion: v1
kind: Service
metadata:
 name: nginx-loadbalancer-svc
 labels:
   k8s-app: nginx-app-loadbalancer
spec:
 type: LoadBalancer
 ports:
 - port: 81
   targetPort: 80
   protocol: TCP
   name: http
 selector:
   k8s-app: nginx-app-loadbalancer
